# novaic

./: .dockerignore  .gitignore  .gitmodules  AGENT_INDEX_MIGRATION_COMPLETE.md  API_CHANGES.md  ARCHITECTURE.md  ARCHITECTURE_REFACTOR_PLAN.md  ARCHITECTURE_V2.md  ARCH_V2_MIGRATION_STATUS.md  AUTO_TRUNCATE_IMPLEMENTATION_REPORT.md  AUTO_TRUNCATE_QUICK_REF.md  BACKEND_API_AGENT_INDEX_REMOVAL_QUICK_REF.md  BACKEND_API_AGENT_INDEX_REMOVAL_SUMMARY.md  BACKWARD_COMPATIBILITY_REMOVAL.md  BACKWARD_COMPATIBILITY_REMOVAL_INDEX.md  BACKWARD_COMPATIBILITY_REMOVAL_QUICK_REF.md  BACKWARD_COMPATIBILITY_REMOVAL_VERIFICATION.md  BROWSER_CONTROL_API.md  BROWSER_CONTROL_IMPLEMENTATION.md  BROWSER_CONTROL_QUICK_REFERENCE.md  BROWSER_CONTROL_SUMMARY.md  BROWSER_SCREENSHOT_MIGRATION_REPORT.md  BROWSER_SCREENSHOT_TEST_REPORT.md  BROWSER_TOOLS_BATCH_MIGRATION_REPORT.md  BROWSER_TOOLS_IMPLEMENTATION_SUMMARY.md  BROWSER_TOOLS_MIGRATION_SUMMARY.md  BROWSER_TOOLS_QUICK_REF.md  BUG_FIX_SUMMARY.md  CLEANUP_CHECKLIST.md  CLOUD_INIT_DEPENDENCIES.md  CLOUD_INIT_FIX_QUICK_REF.md  CLOUD_INIT_FIX_REPORT.md  COMMIT_MESSAGE.md  COMMON_LIB_MIGRATION.md  COMPLETION_REPORT.md  CONFIG_REFACTOR_SUMMARY.md  CONTEXT_TOOLS_IMPLEMENTATION.md  CONTRIBUTING.md  DATABASE_ACCESS_AUDIT.md  DEVELOPMENT.md  (+208 more)
.complex-problems/: INDEX.json  INDEX.md  (+313 more)
entangled-service/: .gitignore  main.py  pyproject.toml  requirements.txt
entangled-service/entangled_service/: __init__.py  app.py  config.py
entangled-service/entangled_service/api/: crud.py  health.py  schema.py  ws.py
entangled-service/entangled_service/db/: __init__.py  access.py  database.py
entangled-service/entangled_service/middleware/: auth.py
entangled-service/entangled_service/store/: __init__.py  entity_def.py  entity_store.py  field_def.py  schema_registry.py  sync_persistence.py
novaic-app/src-tauri/: Cargo.toml  tauri.conf.json
novaic-app/src-tauri/capabilities/: main.json
novaic-app/src-tauri/icons/: icon.icns  regenerate_app_icon.py
novaic-app/src-tauri/resources/novaic-backend/_internal/: collector_main.py  launcher_main.py  main.py  mcp_main.py
novaic-app/src-tauri/resources/novaic-backend/_internal/agent/: __init__.py
novaic-app/src-tauri/resources/novaic-backend/_internal/aiohttp-3.13.3.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/api/: agents.py  claim.py  internal.py  internal_mcp.py  routes.py  vm.py
novaic-app/src-tauri/resources/novaic-backend/_internal/config/: __init__.py
novaic-app/src-tauri/resources/novaic-backend/_internal/core/: agent.py  session.py
novaic-app/src-tauri/resources/novaic-backend/_internal/cryptography-46.0.4.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/db/: database.py  schema.py
novaic-app/src-tauri/resources/novaic-backend/_internal/email_validator-2.3.0.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/executor/: mcp_client.py
novaic-app/src-tauri/resources/novaic-backend/_internal/fakeredis-2.33.0.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/fastapi-0.128.0.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/fastmcp-2.14.4.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/httpx-0.28.1.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-backend/_internal/jsonschema-4.26.0.dist-info/: RECORD
novaic-app/src-tauri/resources/novaic-vm-tools/: pyproject.toml
novaic-app/src-tauri/resources/qemu/: qemu-img
novaic-app/src-tauri/resources/qemu/libs/: libgnutls.30.dylib  libpng16.16.dylib  libssh.4.dylib
novaic-app/src-tauri/src/: app_config.rs  config.rs  gateway_client.rs  http_client.rs  main.rs  split_runtime.rs
novaic-app/src-tauri/src/commands/: agent_commands.rs  config_commands.rs  file_commands.rs  mod.rs  vm_commands.rs
novaic-app/src-tauri/src/vm/: deploy.rs  manager.rs  mod.rs  setup.rs
novaic-app/src-tauri/vmcontrol/: Cargo.toml
novaic-app/src-tauri/vmcontrol/src/: error.rs  lib.rs  main.rs
novaic-app/src-tauri/vmcontrol/src/android/: emulator.rs
novaic-app/src-tauri/vmcontrol/src/scrcpy/: mod.rs
novaic-mcp-chat/: pyproject.toml
novaic-mcp-chat/src/novaic_mcp_chat/: __init__.py  main.py
novaic-mcp-local/: pyproject.toml
novaic-mcp-local/src/novaic_mcp_local/: __init__.py  main.py
novaic-mcp-memory/: pyproject.toml
novaic-mcp-memory/src/novaic_mcp_memory/: __init__.py  main.py
novaic-mcp-qemudebug/: pyproject.toml
novaic-mcp-qemudebug/src/novaic_mcp_qemudebug/: __init__.py  main.py
novaic-mcp-session/: pyproject.toml
novaic-mcp-session/src/novaic_mcp_session/: __init__.py  main.py
novaic-quic-service/: Cargo.toml  README.md
novaic-quic-service/.cargo/: config.toml
novaic-quic-service/deploy/: deploy.sh  env.example  nginx-cnd-frontend.conf  nginx-frontend.conf  novaic-quic-service.service  setup-certbot.sh  setup-cnd-frontend-nginx.sh
novaic-quic-service/src/: auth.rs  config.rs  lib.rs  main.rs  protocol.rs  relay.rs  stun.rs
novaic-release-controller/: config.sample.json  pyproject.toml
novaic-release-controller/nginx/: cicd-dashboard-readonly.conf
novaic-release-controller/release_controller/: __init__.py  config.py  dashboard.html  executor.py  main.py  models.py  planner.py  poller.py  polling.py  runner.py  service.py  state.py
novaic-release-controller/tests/: test_config_models.py  test_planner_runner.py  test_poller.py  test_service.py  test_state.py
novaic-shared-kernel/: MIGRATION.md  README.md  pyproject.toml
novaic-shared-kernel/src/common/: __init__.py  config.py  enums.py  exceptions.py  strict_config.py
novaic-shared-kernel/src/common/db/: __init__.py  database.py  locks.py
novaic-shared-kernel/src/common/http/: __init__.py  clients.py
novaic-shared-kernel/src/common/utils/: __init__.py  time.py
(+11145 files in other folders)
