[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "entangled-service"
version = "0.1.0"
description = "Standalone Entangled entity engine — CRUD, sync, and real-time push"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-jose[cryptography]>=3.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pytest-asyncio"]
