[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novaic-mcp-chat"
version = "0.1.0"
description = "NovAIC MCP Server for Agent-User Chat"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
novaic-mcp-chat = "novaic_mcp_chat.main:main"
