[project]
name = "novaic-mcp-local"
version = "0.1.0"
description = "NovAIC MCP Server for Local Tools (web search, fetch, etc.)"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "readability-lxml>=0.8.1",
]

[project.scripts]
novaic-mcp-local = "novaic_mcp_local.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novaic_mcp_local"]
