[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novaic-mcp-memory"
version = "0.1.0"
description = "NovAIC MCP Server for Memory & State Management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
]

[project.scripts]
novaic-mcp-memory = "novaic_mcp_memory.main:main"
