[project]
name = "novaic-mcp-qemudebug"
version = "0.1.0"
description = "NovAIC MCP Server for QEMU VM Debugging Tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "asyncssh>=2.14.0",
    "pillow>=10.0.0",
]

[project.scripts]
novaic-mcp-qemudebug = "novaic_mcp_qemudebug.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novaic_mcp_qemudebug"]
