[project]
name = "novaic-mcp-session"
version = "0.1.0"
description = "NovAIC MCP Server for Session Management Tools"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.4.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
novaic-mcp-session = "novaic_mcp_session.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/novaic_mcp_session"]
